--- a/frontend/app/book/style.module.css
+++ b/frontend/app/book/style.module.css
@@ -16,7 +16,7 @@
 .table th {
   border: 1px solid black;
   padding: 8px 16px;
-  text-align: left;
+  text-align: center;
   font-weight: bold;
   background-color: #e0e7ff;
 }
@@ -25,6 +25,7 @@
 .table td {
   border: 1px solid black;
   padding: 8px 16px;
+  text-align: center;
 }
 
 .table tr:hover {
