--- a/frontend/app/chart/chart.module.css
+++ b/frontend/app/chart/chart.module.css
@@ -1,6 +1,6 @@
 .chartContainer {
-  width: 100%;
-  height: 320px;
+  width: 95%;
+  height: 350px;
   border-radius: 12px;
   background: #fff;
   padding: 10px;
@@ -11,4 +11,24 @@
   font-size: 20px;
   font-weight: bold;
   margin-bottom: 10px;
+}
+.legendBox {
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+}
+
+.legendItem {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+}
+
+.legendColor {
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+  margin-right: 6px;
+  border-radius: 4px;
 }
