--- a/frontend/app/components/Header/header.module.css
+++ b/frontend/app/components/Header/header.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     color: white;
     height: 10%;
-    background-color:#27ac1f;
+    background-color:#5DC47F;
     padding: 10px;
     /* border-radius: 12px; */
     /* margin: 20px; */
