--- a/frontend/app/css/addForm.module.css
+++ b/frontend/app/css/addForm.module.css
@@ -1,10 +1,13 @@
 .container {
-    max-width: 500px;
+    max-width: 600px;
     margin: 40px auto;
     padding: 20px;
-    background-color: #ffffff;
-    border-radius: 12px;
+    background-color: #D7F5E6;
+    border-radius: 10px;
     box-shadow: 2 4px 12px rgba(24, 23, 23, 1);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .title {
@@ -18,18 +21,21 @@
     display: flex;
     flex-direction: column;
     gap: 12px;
+    width: 80%;
 }
 
-.form label{
+.form label {
     color: #12181e;
 }
 
 .input {
     width: 100%;
+    height: 40px;
     padding: 5px 12px;
-    font-size: 1rem;
-    border: 2px solid #27ac1f;
-    border-radius: 8px;
+    font-size: 12px;
+    background-color: #ffffff;
+    border: 1px solid #28644c;
+    border-radius: 10px;
     outline: none;
     transition: border-color 0.3s, box-shadow 0.3s;
     color: #12181e;
@@ -38,25 +44,28 @@
 
 .input:focus {
     border-color: #ffffff;
-    box-shadow: 0 0 5px #27ac1f;
+    box-shadow: 0 0 5px #28644c;
 }
 
 .button {
+    display: block;
+    margin: 20px auto 0;
     padding: 12px 16px;
-    font-size: 1rem;
-    background-color:#27ac1f;
+    font-size:12px;
+    background-color: #28644c;
     color: #ffffff;
     border: none;
-    border-radius: 8px;
+    border-radius: 30px;
     cursor: pointer;
     transition: background-color 0.3s;
-    border:1px solid #27ac1f;
+    border: 1px solid #28644c;
+    width: 50%;
 }
 
 .button:hover {
-    background-color: #74d56f;
-    color: #12181e;
-    border: #27ac1f 1px solid;
+    background-color: #358b68;
+    color: #ededed;
+    border: #358b68 1px solid;
 }
 
 .button:active {
